2002-10-08  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-button-item.c
	(set_label): re-write for Morten to make
	it substantially more efficient.

2002-10-01  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3.1

2002-10-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_get_popup_component):
	don't use un-initialized return value.

2002-09-30  Michael Meeks  <michael@ximian.com>

	* tests/test-filesel.c (get_files): make
	it quit nicely; #94368

2002-09-19  Michael Meeks  <michael@ximian.com>

	* samples/controls/Makefile.am: Add CLEANFILES so that make clean
	deletes Bonobo_Sample_Controls.server 
	and Bonobo_Sample_controls.server.in

2002-09-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c
	(impl_dispose): free list here no in finalize
	(impl_finalize): upd.
	(bonobo_ui_toolbar_insert): only sink/ref
	if we didn't own it already.
	(item_destroy_cb): unref the object on remove.

2002-09-16  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (prune_node):
	never unref a root widget.

2002-09-12  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_copy): fix; not that anyone
	uses it in fact.
	(bonobo_ui_node_add_child): simplify.

2002-09-09  Gustavo Carneiro <gjc@inescporto.pt>

	* doc/ui-faq.txt: add BonoboCustomize note.

2002-09-03  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_stamp_root): don't leak
	references as we re-stamp the root.

2002-09-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_ref): fix bad bogon.

	* bonobo/bonobo-window.c
	(bonobo_window_realize): kill; we don't
	need to flush the cache, on settings
	changed, we use stock icons properly now.
	(setting_changed_cb): bin.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_set_image): bin the
	widget direction in the cache.
	(bonobo_ui_image_cache_trash): bin.